syntax = "proto2";

package tutorial;

option java_package = "com.tankmania.proto";
option java_outer_classname = "TankManiaProtos";

message TankManiaRequest {
    oneof request {
        VersionRequest version_request = 1;
        AssetsRequest assets_request = 2;
    }
}

message TankManiaResponse {
    oneof response {
        VersionResponse version_response = 1;
        AssetsResponse assets_response = 2;
    }
}

message VersionRequest {
}

message VersionResponse {
    required string version = 1;
}

message AssetsRequest {
}

message AssetsResponse {
    repeated Asset asset = 1;
}

message Asset {
    required string name = 1;
    required string version = 2;
    optional string url = 3;
}